[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/Boss1.png" type="Texture" id=1]
[ext_resource path="res://BossTurret.tscn" type="PackedScene" id=2]
[ext_resource path="res://Boss.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 96.0

[node name="Boss" type="KinematicBody2D" groups=[
"boss",
]]
modulate = Color( 1, 1, 1, 0 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Turrets" type="Node2D" parent="."]

[node name="BossTurret" parent="Turrets" instance=ExtResource( 2 )]
position = Vector2( 40, 0 )

[node name="BossTurret2" parent="Turrets" instance=ExtResource( 2 )]
position = Vector2( -40, 0 )
rotation = 3.14159

[node name="BossTurret3" parent="Turrets" instance=ExtResource( 2 )]
position = Vector2( 0, -40 )
rotation = -1.5708

[node name="BossTurret4" parent="Turrets" instance=ExtResource( 2 )]
position = Vector2( 0, 40 )
rotation = 1.5708

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 8.0

[connection signal="timeout" from="Timer" to="." method="set_active"]
[connection signal="timeout" from="TurnTimer" to="." method="course_correct"]
